Hadoop MapReduce Change Log

Trunk (unreleased changes)


    MAPREDUCE-279

    Fixing scheduling deadlock in AM because of incorrect headRoom values from
    RM. The bug happens when AM releases containers and RM decrements current
    memory usage twice for all those containers. (vinodkv)

    Disabling locality-wait in CapacityScheduler for now to prevent uber-slow
    scheduling for apps with no data-locality constraints (sleep-job like). (vinodkv)

    Fix to schedule reduces irrespective of the headroom when all maps are
    done so as to avoid stall in reduce-scheduling when slow-start is
    disabled. (Sharad Agarwal via vinodkv).

    Fix RM app start/finish time and diagnostics. (llu)

    Fix race condition between multiple localizers on a single node. (cdouglas via mahadev)

    Improve logging for AM when requesting containers to show the right ask 
    and release fields (mahadev)

    Fix NPE when requesting attempts for completed jobs. (Siddharth Seth via llu)

    Changes a couple of usages of FileContext to FileSystem in TaskAttemptImpl 
    to handle distributed cache path resolutions on non-default filesystems.
    (ddas)

    Hack until MAPREDUCE-2365 is fixed to make PIG work with MRV2. (mahadev)

    Bug fix to set correct state on containers so as to avoid duplicate
    containers from RM to AM. (vinodkv)

    Adding attempts page to the history server UI. (vinodkv)

    Task diagnostic info made available on the AM UI. (vinodkv)

    MAPREDUCE-2598. Fix NPE and UI for JobHistory. (Siddharth Seth via llu)

    Fix NPE when killing/failing already killed/failed tasks. (llu)
   
    Update install instructions with svn unsplit (Thomas Graves via mahadev)

    MAPREDUCE-2587. Generate yarn version for UI. (Thomas Graves via llu)

    Fix stopContainer for setsid challenged platforms. (llu)

    Fix concurrent modification exception in the Capacity Scheduler (mahadev)

    Changes for invoking rack resolution in the RM and in the AM (ddas)
